<resources>
    <string name="app_name">DatabaseExperiment</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="welcome_login">Welcome</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="admin_login">用户管理系统</string>
    <string name="all_users">用户列表</string>
    <string name="search_users">搜索用户</string>
    <string name="delete_users">删除用户</string>
    <string name="add_users">新增</string>
    <string name="logout">注销账户</string>
    <string name="add_user">新增</string>
    <string name="username">用户：</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="add_new_user">新增用户</string>
    <string name="add">添加</string>
    <string name="add_right">增加权限</string>
    <string name="manage_right">权限管理</string>
    <string name="basic_info_repository">基本信息库</string>
    <string name="right_no">权限编号</string>
    <string name="right_name">权限名称</string>
    <string name="right_module">模块名称</string>
    <string name="win_name">页面名称</string>
    <string name="update_pass">修改密码</string>
    <string name="update">修改</string>
    <string name="check_right">查看权限</string>
    <string name="reserve_pass">记住密码</string>
    <string name="user_login">用户登录</string>
    <string name="manager">管理员</string>
    <string name="general_user">用户</string>
    <string name="simple">简单型编辑室</string>
    <string name="ordered">带序号编辑室</string>
    <string name="code">带编码图书类型</string>
    <string name="in_use">带在用标识编辑室</string>
    <string name="info_name">信息名引用</string>
    <string name="primary_key">主键引用</string>
    <string name="code_ref">编码引用</string>
    <string name="id">ID</string>
    <string name="order">序号</string>
    <string name="bjsName">编辑室名</string>
    <string name="bjsName_id">编辑室ID</string>
    <string name="use">是否在用</string>
    <string name="book_type">图书类型</string>
    <string name="book_code">图书编码</string>
    <string name="book_type_id">图书类型ID</string>
    <string name="book_name">书名</string>
    <string name="stu_no">学号</string>
    <string name="stu_name">姓名</string>
    <string name="grade">年级</string>
    <string name="class_no">班级</string>
    <string name="study_time">学制</string>
    <string name="birth_date">出生日期</string>
    <string name="enrollment_date">入学日期</string>
    <string name="save">保存</string>
    <string name="clear">清除</string>
    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="sex2">
        <item>所有</item>
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="category">
        <item>本科生</item>
        <item>研究生</item>
        <item>博士生</item>
    </string-array>

    <string-array name="category2">
        <item>所有</item>
        <item>本科生</item>
        <item>研究生</item>
        <item>博士生</item>
    </string-array>

    <string-array name="logic_option">
        <item>and</item>
        <item>or</item>
    </string-array>

    <string-array name="operator">
        <item>》</item>
        <item>=</item>
        <item>《</item>
        <item>!=</item>
        <item>》=</item>
        <item>《=</item>
        <item>like</item>
    </string-array>

    <string-array name="field">
        <item>姓名</item>
        <item>性别</item>
        <item>学号</item>
        <item>学院</item>
        <item>专业</item>
        <item>年级</item>
        <item>班级</item>
        <item>入学日期</item>
        <item>学制</item>
        <item>类别</item>
        <item>出生日期</item>
    </string-array>
    
    <string-array name="bookType">
        <item>全部</item>
        <item>数理科学和化学</item>
        <item>交通运输</item>
        <item>经济</item>
        <item>矿业工程</item>
        <item>建筑科学</item>
        <item>文化·科学·教育·体育</item>
    </string-array>
</resources>
