<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/topColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/id" />

        <TextView
            android:id="@+id/txtOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order" />

        <TextView
            android:id="@+id/txt_bjs_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/bjsName" />

        <TextView
            android:id="@+id/txtInUse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/use" />
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/topColumn"
        android:background="@color/gray4" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerSimpleTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line2" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottomLayout"
        android:background="@color/gray4" />

    <FrameLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/addNewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="序号"
                android:inputType="number" />

            <EditText
                android:id="@+id/editBjsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="编辑室名" />

            <ToggleButton
                android:id="@+id/toggleUse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="否"
                android:textOn="是" />

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/corner_rec_bg_blue_press"
                android:onClick="onAddNewRight"
                android:text="@string/add"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/corner_rec_bg_blue_press"
                android:onClick="onDeleteRights"
                android:text="@string/delete"
                android:textColor="@color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/corner_rec_bg_blue_press"
                android:onClick="onCancelDelete"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>